--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -56,6 +56,9 @@
 	/*box-shadow: 0 15px 15px rgba(0,0,0, .8);*/
 	box-shadow: 0 15px 15px rgba(255,255,255,0.8);
   }
+  .glow{
+	text-shadow: 1px 1px 2px #faf7f7;
+  }
 /*homepage styling ends*/
 
 /*table styling*/
@@ -85,7 +88,7 @@
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: rgb(92, 59, 75);
+    
     color: white;
   }
 
@@ -123,7 +126,7 @@
 /*form styling ends*/
 /*add button*/
   .button {
-	background-color: rgb(92, 59, 75);
+	
 	border: none;
 	color: white;
 	padding: 15px 32px;
